--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <a id="github-link" href="https://github.com/8kevin24/d3interactive/blob/master/README.MD" target="_blank">
+        GitHub Repository
+    </a>
+    
     <h1>What causes in-hospital fatalities?</h1>
     <p style="font-size: 14px; color: red; text-align: center; max-width: 900px; margin: auto;">
         *Normalization scales data based on the number of standard deviations from the mean, 
