--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <a id="github-link" href="https://github.com/8kevin24/d3interactive/blob/master/README.MD" target="_blank">
-        GitHub Repository
+        Explanation of Design Rationale and Development Process
     </a>
-    
+
     <h1>What causes in-hospital fatalities?</h1>
     <p style="font-size: 14px; color: red; text-align: center; max-width: 900px; margin: auto;">
         *Normalization scales data based on the number of standard deviations from the mean, 
